--- a/Resume/profile.html
+++ b/Resume/profile.html
@@ -157,7 +157,7 @@
         <div class="title">
            <p class="bold">About us</p>
          </div>
-        <p><a href="hmwtech-info/index.html">HMWTECH</a> is a company created out of necessity and passion for innovation and invention. We are also a lab for technological profession.</p>
+        <p><a href="/index.html">HMWTECH</a> is a company created out of necessity and passion for innovation and invention. We are also a lab for technological profession.</p>
     </div>
     <div class="resume_item resume_work">
         <div class="title">
